# lmcontrol

./: .gitignore  Dockerfile.viz  README.md  environment.yml  pyproject.toml  requirements.txt
notebooks/: 19_Nov_embs_cm_violins.ipynb  Cluster_Mask.ipynb  Conversions.ipynb  NEW_14_Nov.ipynb  Plot_no_delete.ipynb  Report_Oct_25.ipynb  Segment.ipynb  runs.ipynb
scripts/: 1296_ambr01_NSR.sh  1296_clf.sh  1296_clf_ambr03.sh  OPTATUNE_tune.sh  best_trial.sh  byol_ambr01.sh  byol_combined_200e.sh  byol_predict_simple.sh  byol_train_simple.sh  combined_ambr01_ambr03.sh  emb-viz.sh  predict.sh  predict_simple.sh  prep-viz.sh  run_these.sh  s1_ambr01_1e-3.sh  s2_ambr01_1e-3.sh  slurm_test.py  stratify_simple.sh  temp.sh  temp_ambr01_1e-3.sh  temp_ambr01_1e-4.sh  temp_ambr01_5e-4.sh  temp_ambr03_1e-3.sh  temp_ambr03_1e-4.sh  temp_ambr03_5e-4.sh  temp_optuna_ambr01_NSR.sh  train.sh  train_simple-checkpoint.sh  train_simple.sh
scripts/.ipynb_checkpoints/: train_simple-checkpoint.sh
scripts/cropping_files/: background_noise_like_images.sh  crop_ABF_FA_ambr01.sh  crop_ambr01.sh  crop_ambr03.sh  water_images.sh
src/lmcontrol/: __init__.py  command.py  data_utils.py  downsample.py  merge.py  metadata_info.yaml  segment.py  utils.py  viz.py
src/lmcontrol.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/lmcontrol/nn/: byol.py  clf.py  clf_time_reactor.py  dataset.py  print_split.py  resnet.py  run_byol.py  stratify-clf.py  utils.py
src/lmcontrol/viz/: interactive_viz.py  make_package.py  utils.py
