[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "lmcontrol"
authors = [
  { name="Andrew Tritt", email="ajtritt@lbl.gov" },
]
description = "A package for managing tools needed for light-microscopy based control of bioreactors"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: BSD License",
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = [
    "python",
]
dynamic = ["version"]

dependencies = [
    "numpy",
    "scikit-learn",
    "hdmf",
    "hdmf-ai @ git+https://github.com/hdmf-dev/hdmf-ai",
]

[project.optional-dependencies]
# --extra-index-url https://pypi.nvidia.com
# --extra-index-url https://download.pytorch.org/whl/cu129
nn = [
    "cuml-cu12==25.6.*",
    "umap-learn",
    "optuna",
    "wandb",
    "optuna-integration[pytorch_lightning]",
    "torch",
    "torchvision",
    "lightning",
    "lightly"
]

viz = [
    "Pillow",
    "pandas",
    "matplotlib",
    "dash",
    "plotly"
]

preprocessing = [
    "FlowKit @ git+https://github.com/lbl-cbg/FlowKit.git",
    "numba",
    "openpyxl",
    "Pillow",
    "pandas",
    "skimage",
    "tqdm"
]

dev = [
    "ruff"
]

[project.scripts]
lmcontrol = "lmcontrol:main"

[tool.setuptools_scm]
